--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       <div class="container">
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html">Works On Paper</a>
+      	  <a href="./paper.html">Work On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
@@ -32,24 +32,22 @@
 
         <img class="about-img" src="./images/Gina in Studio.jpg">
 
-        <h2><a id="cv" href="./GW_cv.pdf" target="_blank">Curriculum Vitae</a></h2><br>
         <h2>Contact</h2>
-        <p>For inquiries regarding the work of Gina Werfel:</p><br>
         <h3>Gina Werfel</h3>
         <p>gswerfel@ucdavis.edu</p><br>
         <h3>Prince Street Gallery</h3>
         <p><a href="https://princestreetgallery.com/artist-page/gina-werfel/" target="_blank">https://princestreetgallery.com/artist-page/gina-werfel/</a><br>
         530 West 25th Street 4th Floor<br>
         New York, NY 10001<br>
-        (646)230-0246</p><br>
+        (646)230-0246</p>
         <h3>IdeelArt</h3>
-        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p><br>
+        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p>
         <h3>Adler&Co Gallery</h3>
-        <p><a href="http://www.adlerandco.com/werfel/index.html" target="_blank">http://www.adlerandco.com/werfel/index.html</a></p>
+        <p><a href="http://www.adlerandco.com/werfel/index.html" target="_blank">http://www.adlerandco.com/werfel/index.html</a></p><br>
 
-        <br>
+        <h3><a id="cv" href="./GW_cv.pdf" target="_blank">Curriculum Vitae</a></h3><br>
 
-        <h2>Artist Statement/Bio</h2>
+        <h2>Artist Statement</h2>
         <p>My current paintings and works on paper involve textures of multiple voices.
         Clearly defined graphical lines and stencils sit on the surface of a shallow space,
         in tension with a more ambiguous environment of naturalistic gestures, which
