--- a/painting.html
+++ b/painting.html
@@ -15,7 +15,7 @@
       <div class="container">
       	<nav class="navigation">
       	  <a href="./painting.html" class="active">Painting</a>
-      	  <a href="./paper.html">Works On Paper</a>
+      	  <a href="./paper.html">Work On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
@@ -40,12 +40,12 @@
           <img class="gallery-img" src="./images/paintings/Gina Cooler-2.jpg">
           <img class="gallery-img" src="./images/paintings/Gina Cooler-11.jpg">
           <img class="gallery-img" src="./images/paintings/IMG_3927.jpg">
+          <img class="gallery-img" src="./images/paintings/IMG_9405.jpg">
           <img class="gallery-img" src="./images/paintings/IMG_3916.jpg">
           <img class="gallery-img" src="./images/paintings/IMG_9349.jpg">
           <img class="gallery-img" src="./images/paintings/IMG_9362.jpg">
           <img class="gallery-img" src="./images/paintings/IMG_9369.jpg">
           <img class="gallery-img" src="./images/paintings/IMG_9383.jpg">
-          <img class="gallery-img" src="./images/paintings/IMG_9405.jpg">
           <img class="gallery-img" src="./images/paintings/Borders.jpg">
           <img class="gallery-img" src="./images/paintings/Constellation.jpg"><!--"Singapore", 60"x48", 2017-->
           <img class="gallery-img" src="./images/paintings/Tumble 60x48 2017.jpg"><!--"Tumble", 60"x48", oil on canvas, 2017-->
@@ -70,15 +70,15 @@
           <img class="gallery-icon" onclick="currentImg(3)" src="./images/paintings/icons/Gina Cooler-2 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(4)" src="./images/paintings/icons/Gina Cooler-11 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(5)" src="./images/paintings/icons/IMG_3927 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(6)" src="./images/paintings/icons/IMG_3916 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(7)" src="./images/paintings/icons/IMG_9349 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(8)" src="./images/paintings/icons/IMG_9362 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(9)" src="./images/paintings/icons/IMG_9369 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(10)" src="./images/paintings/icons/IMG_9383 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(11)" src="./images/paintings/icons/IMG_9405 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(12)" src="./images/paintings/icons/Borders icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(13)" src="./images/paintings/icons/Constellation icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(14)" src="./images/paintings/icons/Tumble 60x48 2017 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(6)" src="./images/paintings/icons/IMG_9405 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(7)" src="./images/paintings/icons/IMG_3916 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(8)" src="./images/paintings/icons/IMG_9349 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(9)" src="./images/paintings/icons/IMG_9362 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(10)" src="./images/paintings/icons/IMG_9369 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(12)" src="./images/paintings/icons/IMG_9383 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" src="./images/paintings/icons/Borders icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(14)" src="./images/paintings/icons/Constellation icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(15)" src="./images/paintings/icons/Tumble 60x48 2017 icon.jpg">
         </div>
       </div>
     </div>
