--- a/public art.html
+++ b/public art.html
@@ -15,7 +15,7 @@
       <div class="container">
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html">Works On Paper</a>
+      	  <a href="./paper.html">Work On Paper</a>
       	  <a href="./public art.html" class="active">Public Art</a>
       	  <a href="./archive.html">Archive</a>
           <!--a href="./reviews.html">Publications</a-->
@@ -29,8 +29,8 @@
     <div class="content-wrapper">
       <div class="gallery-description">
         <h2>Clearing</h2>
-        <p>Clearing is an integrated network of abstract and abstracting objects. Seven interlocking porcelain enamel panels line the central pathway, ranging in size from six feet to eighteen inches high. Panels create abstractions of both site and instillation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
-        <p>The centerpiece of Sacramento’s Burnett Miller Park, Clearing mediates surface, depth-of-field, and perspective.</p>
+        <p><i>Clearing</i> is an integrated network of abstract objects. Seven interlocking porcelain enamel panels line the central pathway, ranging in size from six feet to eighteen inches high. Panels create abstractions of both site and installation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
+        <p>The centerpiece of Sacramento’s Burnett Miller Park, <i>Clearing</i> mediates surface, depth-of-field, and perspective.</p>
         <p>Assisted by Galen Pardee</p>
         <p>Photography by Joan Cusick And Injinash Unshin</p>
       </div>
