Start Press + Edits
Replaced the Artist Statement with the updated third-person one. Updated the public art description. Set up the wrappers for the news page. Apparently the php works again, I'll have to test to figure out why it broke. Maybe because I moved stuff around while it was up?

--- a/about.html
+++ b/about.html
@@ -48,34 +48,10 @@
         <h3><a id="cv" href="./GW_cv.pdf" target="_blank">Curriculum Vitae</a></h3><br>
 
         <h2>Artist Statement</h2>
-        <p>My current paintings and works on paper involve textures of multiple voices.
-        Clearly defined graphical lines and stencils sit on the surface of a shallow space,
-        in tension with a more ambiguous environment of naturalistic gestures, which
-        fade in and out of focus like distant memories. The layering, and the contrast
-        between stencilled and hand-drawn marks in a wide vocabulary of signs, make
-        reference to the influence of Photoshop on contemporary visual culture. The
-        removal of the hand in my recent series of process-driven mono-prints highlights
-        this dichotomy.</p>
-        <p>Recent travels abroad have influenced my work. Inspired by a stay in Singapore
-        in 2015 where I taught at Yale-NUS College, I began to employ spray-painted
-        stencils over my gestural brush marks, making use of everyday textured
-        materials as well as Chinese New Year’s decorations from Singapore. In 2016
-        while a visiting artist at the American Academy in Rome, I renewed my interest in
-        Baroque ceiling paintings and incorporated their spatial complexity into my
-        compositions. I began to empty out the center and vary the density of marks.</p>
-        <p>My work has been featured in numerous exhibitions in the U.S. and abroad.
-        Recent solo exhibitions include the Coombs Gallery at American University of
-        Paris, France, Korn Gallery at Drew University, New Jersey, Prince Street
-        Gallery in New York City, and the Mondavi Winery in Napa, CA. I have been
-        awarded residencies at the American Academy in Rome, the Rockefeller
-        Foundation’s Bellagio Center in Italy, the Djerassi Foundation in California, the
-        Virginia Center for the Creative Arts, the International School of Painting in
-        Montecastello di Vibio, Italy and Yosemite National Park. In 2017, I completed a
-        multi-part public art commission Clearing for Burnett Miller Park in McKinley
-        Village in Sacramento.</p>
-        <p>I received my MFA at Columbia University, a certificate at the New York Studio
-        School and a BA from Hamilton College. I am currently a Professor of Art at
-        University of California Davis.</p>
+        <p>Werfel’s current paintings and works on paper involve multiple voices. Clearly defined graphical lines and stencils exist in tension with more naturalistic gestures, which fade in and out of focus like distant memories in a shallow, ambiguous space. The layering, and the contrast between the stencilled and hand-drawn marks, make reference to the influence of Photoshop on contemporary visual culture. The removal of the hand in a recent series of process-driven mono-prints highlights this dichotomy.</p>
+        <p>Recent travels abroad have influenced Werfel’s work. Inspired by a stay in Singapore in 2015 where she taught at Yale-NUS College, she began to employ spray-painted stencils over gestural brush marks, making use of everyday textured materials as well as Chinese New Year’s decorations from Singapore. In 2016 while a visiting artist at the American Academy in Rome, Werfel renewed her interest in Baroque ceiling paintings and incorporated their spatial complexity into compositions. She began to empty out the center and vary the density of marks.</p>
+        <p>Werfel’s work has been featured in numerous exhibitions in the U.S. and abroad. Recent solo exhibitions include the Coombs Gallery at American University of Paris, France,  Korn Gallery at Drew University, NJ, Prince Street Gallery in NYC, and the Mondavi Winery in Napa, CA. She has been awarded residencies at the American Academy in Rome, the Rockefeller Foundation’s Bellagio Center in Italy, the Djerassi Foundation in California, the Virginia Center for the Creative Arts, the International School of Painting in Montecastello di Vibio, Italy and Yosemite National Park. In 2017, Werfel  completed a multi-panel public art commission Clearing for Burnett Miller Park in Sacramento.</p>
+        <p>Werfel’s training includes Columbia University (MFA), New York Studio School (Certificate) and Hamilton College (BA). She is a Professor of Art at University of California Davis.</p>
 
       </div>
     </div>
