--- a/news.html
+++ b/news.html
@@ -25,8 +25,19 @@
       </div>
     </header>
 
-    <!-- Subcategories: catalogues, interviews, reviews-->
+    <!-- Content wrapper pads the margins from the header and footer -->
+    <div class="content-wrapper">
+      <!-- About wrapper pads the main content and aligns it to the center -->
+      <div class="about-wrapper">
+        <!-- Subcategories: catalogues, interviews, reviews-->
+        <h2>Reviews</h2>
 
+        <h2>Interviews</h2>
+
+        <h2>Catalogues</h2>
+
+      </div>
+    </div>
 
     <!-- Page footer for copyright and social media info -->
     <footer class="footer">
