--- a/public art.html
+++ b/public art.html
@@ -29,7 +29,7 @@
     <div class="content-wrapper">
       <div class="gallery-description">
         <h2>Clearing</h2>
-        <p><i>Clearing</i> is an integrated network of abstract objects. Seven interlocking porcelain enamel panels line the central pathway, ranging in size from six feet to eighteen inches high. Panels create abstractions of both site and installation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
+        <p><i>Clearing</i> is an integrated network of abstract objects which reproduce parts of a painting. Seven interlocking porcelain enamel panels line the central pathway, ranging in height from eighteen inches to six feet. Panels create abstractions of both site and installation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
         <p>The centerpiece of Sacramento’s Burnett Miller Park, <i>Clearing</i> mediates surface, depth-of-field, and perspective.</p>
         <p>Assisted by Galen Pardee</p>
         <p>Photography by Joan Cusick And Injinash Unshin</p>
