Archive Info + Untested Php Conversion
Added all the information text files for the archive images. Created new php files for works on paper and the archive. Just copy pasted the same code and changed the directory path, and added a count for archive. Haven't tested them, and I think the way archive is set up, with the two folders, might create an error with the php, since I have to call the code twice. I might have to rename variables for it to work properly.

--- a/paper.html
+++ b/paper.html
@@ -52,6 +52,11 @@
           <img class="gallery-img" src="./images/works on paper/Offbeat.jpg">
           <img class="gallery-img" src="./images/works on paper/Polyphony.jpg">
         </div>
+
+        <!-- Gallery container for the image information -->
+        <div class="gallery-info">
+          <div class="info">info</div>
+        </div>
         
         <!-- Gallery container for the bottom navigation-->
         <!-- Click an image to jump to it, use overflow to scroll through them -->
