--- a/painting.html
+++ b/painting.html
@@ -15,7 +15,7 @@
       <div class="container">
       	<nav class="navigation">
       	  <a href="./painting.html" class="active">Painting</a>
-      	  <a href="./paper.html">Work On Paper</a>
+      	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
