--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
       	<nav class="homepage navigation">
       	  <a href="./painting.php">Painting</a>
-      	  <a href="./paper.html">Work On Paper</a>
+      	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
