--- a/archive.html
+++ b/archive.html
@@ -17,7 +17,7 @@
       	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
-      	  <a href="./archive.html" class="active">Archive</a>
+      	  <a href="./archive.php" class="active">Archive</a>
           <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
