--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   	<meta charset="utf-8">
   	<link rel="stylesheet" type="text/css" href="style.css">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+  	<meta name="description" content="">
   	<title>Home | Gina Werfel</title>
   </head>
 
@@ -18,7 +19,7 @@
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
       	<nav class="homepage navigation">
-      	  <a href="./painting.php">Painting</a>
+      	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
