--- a/painting.html
+++ b/painting.html
@@ -14,7 +14,7 @@
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
       	<nav class="navigation">
-      	  <a href="./painting.html" class="active">Painting</a>
+      	  <a href="./painting.php" class="active">Painting</a>
       	  <a href="./paper.html">Works On Paper</a>
       	  <a href="./public art.html">Public Art</a>
       	  <a href="./archive.html">Archive</a>
