Special Projects + Wide
Renamed Public Art to Special Projects. Added images and icons for the rug project. Waiting on the guy to put it in the gallery. Added empty info for the special projects gallery so the script doesn't throw errors. I could've made an if statement but this was quicker. Also made a seperate directory for the wide images, icons, and infos in works on paper and made and styled a class to make them smaller. They didn't need to all be in a separate folder, but it was too risky due to the way Windows sorts them. Edited the php to accomidate the images, icons, and infos in the wide directory.

--- a/painting.html
+++ b/painting.html
@@ -16,7 +16,7 @@
       	<nav class="navigation">
       	  <a href="./painting.php" class="active">Painting</a>
       	  <a href="./paper.html">Works On Paper</a>
-      	  <a href="./public art.html">Public Art</a>
+      	  <a href="./public art.html">Special Projects</a>
       	  <a href="./archive.html">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
@@ -54,6 +54,20 @@
         <!-- Gallery container for the image information -->
         <div class="gallery-info">
           <div class="info"><i>Trace</i><br>60 x 48 in<br>oil on canvas<br>2017</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
         </div>
 
         <!-- Gallery container for the bottom navigation-->
