--- a/paper.html
+++ b/paper.html
@@ -16,7 +16,7 @@
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.php" class="active">Works On Paper</a>
-      	  <a href="./public art.html">Public Art</a>
+      	  <a href="./public art.html">Special Projects</a>
       	  <a href="./archive.html">Archive</a>
           <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
@@ -39,20 +39,33 @@
           <img class="gallery-img" src="./images/works on paper/Cadence.jpg">
           <img class="gallery-img" src="./images/works on paper/GW17 Stencil 30x22.jpg">
           <img class="gallery-img" src="./images/works on paper/GW18 Opposition 30x22.jpg">
-          <img class="gallery-img" src="./images/works on paper/IMG_3947.jpg">
           <img class="gallery-img" src="./images/works on paper/IMG_3950.jpg">
-          <img class="gallery-img" src="./images/works on paper/IMG_3963.jpg">
           <img class="gallery-img" src="./images/works on paper/IMG_7830.jpg">
           <img class="gallery-img" src="./images/works on paper/Notation.jpg">
           <img class="gallery-img" src="./images/works on paper/Pink Haze.jpg">
-          <img class="gallery-img" src="./images/works on paper/Roma.jpg">
           <img class="gallery-img" src="./images/works on paper/Year of the Ram.jpg">
           <img class="gallery-img" src="./images/works on paper/IMG_9416.jpg">
           <img class="gallery-img" src="./images/works on paper/Skeletal Structure.jpg">
+          <img class="gallery-img wide" src="./images/works on paper/wide/IMG_3947.jpg">
+          <img class="gallery-img wide" src="./images/works on paper/wide/IMG_3963.jpg">
+          <img class="gallery-img wide" src="./images/works on paper/wide/Roma.jpg">
         </div>
 
         <!-- Gallery container for the image information -->
         <div class="gallery-info">
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
+          <div class="info">info</div>
           <div class="info">info</div>
         </div>
         
@@ -74,25 +87,25 @@
           <img class="gallery-icon" onclick="currentImg(4)" 
             src="./images/works on paper/icons/GW18 Opposition 30x22 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(5)" 
-            src="./images/works on paper/icons/IMG_3947 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(6)" 
             src="./images/works on paper/icons/IMG_3950 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(7)" 
-            src="./images/works on paper/icons/IMG_3963 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(8)" 
+          <img class="gallery-icon" onclick="currentImg(6)" 
             src="./images/works on paper/icons/IMG_7830 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(9)" 
+          <img class="gallery-icon" onclick="currentImg(7)" 
             src="./images/works on paper/icons/Notation icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(10)" 
+          <img class="gallery-icon" onclick="currentImg(8)" 
             src="./images/works on paper/icons/Pink Haze icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(11)" 
-            src="./images/works on paper/icons/Roma icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(12)" 
+          <img class="gallery-icon" onclick="currentImg(9)" 
             src="./images/works on paper/icons/Year of the Ram icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(13)" 
+          <img class="gallery-icon" onclick="currentImg(10)" 
             src="./images/works on paper/icons/IMG_9416 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(14)" 
+          <img class="gallery-icon" onclick="currentImg(11)" 
             src="./images/works on paper/icons/Skeletal Structure icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(12)" 
+            src="./images/works on paper/wide/icons/IMG_3947 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(13)" 
+            src="./images/works on paper/wide/icons/IMG_3963 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(14)" 
+            src="./images/works on paper/wide/icons/Roma icon.jpg">
         </div>
       </div>
     </div>
