--- a/public art.html
+++ b/public art.html
@@ -16,7 +16,7 @@
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.html">Works On Paper</a>
-      	  <a href="./public art.html" class="active">Public Art</a>
+      	  <a href="./public art.html" class="active">Special Projects</a>
       	  <a href="./archive.html">Archive</a>
           <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
@@ -79,6 +79,22 @@
           <img class="gallery-icon" onclick="currentImg(11)" src="./images/public art/icons/JCP_0845-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(12)" src="./images/public art/icons/3_o icon.jpg">
           <img class="gallery-icon" onclick="currentImg(13)" src="./images/public art/icons/JCP_0952-X3 icon.jpg">
+        </div>
+        <!-- Empty info divs so the gallery script doesn't throw errors -->
+        <div class="gallery-info">
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
+          <div class="info"></div>
         </div>
       </div>
     </div>
