--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@
       	<nav class="navigation">
       	  <a href="./painting.html">Painting</a>
       	  <a href="./paper.html">Works On Paper</a>
-      	  <a href="./public art.html">Public Art</a>
+      	  <a href="./public art.html">Special Projects</a>
       	  <a href="./archive.html">Archive</a>
           <!--a href="./reviews.html" class="active">Publications</a-->
       	  <a href="./news.html">Press</a>
