--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  	<title>News | Gina Werfel</title>
+  	<title>Press | Gina Werfel</title>
   </head>
 
   <body>
@@ -14,10 +14,10 @@
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
       	<nav class="navigation">
-      	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html">Works On Paper</a>
+      	  <a href="./painting.php">Paintings</a>
+      	  <a href="./paper.php">Works On Paper</a>
       	  <a href="./public art.html">Special Projects</a>
-      	  <a href="./archive.html">Archive</a>
+      	  <a href="./archive.php">Archive</a>
       	  <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html" class="active">Press</a>
       	  <a href="./about.html">About</a>
@@ -53,6 +53,20 @@
             The most purely abstract works in the show are a series of small paintings in acrylic and mixed media on paper which Werfel says are "not based on anything other than color, form and spatial relationships between collage, paint and the white of the paper."<br><br>
             "Mechanical Geometry" is an antic jeu d'esprit reminiscent of works by John Altoon. Also free-spirited is "Dialogue," in which the paint is denser with touches of metallic gold.<br><br>
             Werfel has a delicate, at times almost pretty, sense of color and a lilting attack that gives a lyrical feeling to many of her works. She tempers this tendency towards prettiness in works like "Battle," "Homage," and "Winter Conversation," which have a more visceral feel. All in all, this is a very strong show that rewards extended viewing. The longer you look at these paintings the better they get.
+          </p>
+        </div><br>
+
+        <a class="collapsible">Santa Barbara Independent — February 2012</a>
+        <div class="collapsible-content">
+          <p><img src="./images/press/SBI Feb 2012.jpg" style="max-height: 700px;">
+            <strong>Musical Gesturing</strong><br><i>by Josef Woodard, News-Press Correspondent</i><br><br>
+            Upon first impression, the gentle spirits of the work by Gina Werfel, now showing at Jane Deering Gallery, imply a certain floating feeling, an avoidance of grounding. But impressions shift with closer scrutiny, and we recognize that the painter's immediately apparent delicacy is at least partially deceptive. Muscles are flexing and gears are turning beneath the becalmed surfaces.<br><br>
+            Werfel, a painter of note and an art professor at UC Davis, also creates paintings from a denser, louder place on the spectrum of dynamics in contemporary abstract art, and has had experience dealing with "plein air" landscape painting. But the lighter, representational-free affairs gathered into an alluring exhibition she calls "Polyphonics" at Jane Deering have a sense of graceful rightness, comparable to the art of Joan Mitchell and Helen Frankenthaler (maybe even a mutant combo thereof). In addition to its self-evident charms, the art plays well and hangs compatibly in the compact but open-feeling space of this new Deering gallery.<br><br>
+            This show's title accounts for much in terms of what's abuzz in the painter's aesthetic. True to the musical analogy of the exhibition title, polyphonic being the conjoining and intermingling of different and not necessarily "compatible" harmonic structures and colors, Werfel's visual scheme behaves in a similar way.<br><br>
+            We get the idea of the musicality of what we're looking at, also aided by the title, in "Symphony," a pastoral invention, at that. The artist also works well in more compact dimensions (chamber music?), with humbly-scaled acrylic pieces, as small as eight-by-six inches. Still, there's no doubt that the larger oil on canvas paintings are the main event here.<br><br>
+            Despite the relative calm demeanor and surface "volume" in the art, there is a fair amount of activity and varied gestural riffing going on. That subtle tension and accordance gives the art some of its character. In "Interlude," for example, a particularly pale and milky space, several spare bolder strokes swim and vie for attention.<br><br>
+            Alas, the thicket thickens with "Garland," a more tangled collection of brushstrokes and inklings — a dizzy, desultory garland — of colors and gestures. But a surprisingly arid and vaporous zone on the right side of the painting provides a kind of resonating free space to let the whole breathe. A sense of emphasis on the importance of void and solid, and the expressive power of composition also comes through in the cleverly named piece "Wooded Interior."<br><br>
+            Another truthful title, so apt as to seemingly loop back around to sly and gentle irony, is "Light and Airy," befitting a painting suggesting lightness of being, verging on weightlessness. That same title might be applied to the artist's body of work as a whole. Light and airy, yes, but with secret deposits of depth, retinal energy and a critical exploratory spirit to complicate things in intriguing ways.
           </p>
         </div><br>
 
@@ -128,16 +142,17 @@
         <h2>Catalogues</h2>
         <div class="catalogue-wrapper">
           <div class="catalogue-item">
-            <a href="https://issuu.com/nimbleeyedesignllc/docs/nyssaa_8_30_2018a_magcloud" target="_blank">
-              <img class="catalogue" src="./images/Werfel WCC Thumb.png" alt="NYSS: West Coast Connections">
-              <p>NYSS: West Coast Connections<br>2018</p>
-            </a>
-          </div>
-
-          <div class="catalogue-item">
             <a href="https://indd.adobe.com/view/61c12cfd-76d7-418d-bb23-434620fda71a" target="_blank">
               <img class="catalogue" src="./images/Werfel Interface Thumb.png" alt="Interface">
               <p>Interface<br>2018</p>
+            </a>
+          </div>
+
+        
+          <div class="catalogue-item">
+            <a href="https://issuu.com/nimbleeyedesignllc/docs/nyssaa_8_30_2018a_magcloud" target="_blank">
+              <img class="catalogue" src="./images/Werfel WCC Thumb.png" alt="NYSS: West Coast Connections">
+              <p>NYSS: West Coast Connections<br>2018</p>
             </a>
           </div>
 
