--- a/public art.html
+++ b/public art.html
@@ -5,7 +5,7 @@
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  	<title>Public Art | Gina Werfel</title>
+  	<title>Special Projects | Gina Werfel</title>
   </head>
 
   <body>
@@ -14,10 +14,10 @@
       <a class="title" href="./index.html">Gina Werfel</a>
       <div class="container">
       	<nav class="navigation">
-      	  <a href="./painting.html">Painting</a>
-      	  <a href="./paper.html">Works On Paper</a>
+      	  <a href="./painting.php">Paintings</a>
+      	  <a href="./paper.php">Works On Paper</a>
       	  <a href="./public art.html" class="active">Special Projects</a>
-      	  <a href="./archive.html">Archive</a>
+      	  <a href="./archive.php">Archive</a>
           <!--a href="./reviews.html">Publications</a-->
       	  <a href="./news.html">Press</a>
       	  <a href="./about.html">About</a>
@@ -27,14 +27,12 @@
 
     <!-- Content wrapper pads the margins from the header and footer -->
     <div class="content-wrapper">
-      <div class="gallery-description">
-        <h2>Clearing</h2>
-        <p><i>Clearing</i> is an integrated network of abstract objects which reproduce parts of a painting. Seven interlocking porcelain enamel panels line the central pathway, ranging in height from eighteen inches to six feet. Panels create abstractions of both site and installation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
-        <p>The centerpiece of Sacramento’s Burnett Miller Park, <i>Clearing</i> mediates surface, depth-of-field, and perspective.</p>
-        <p>Assisted by Galen Pardee</p>
-        <p>Photography by Joan Cusick And Injinash Unshin</p>
+      <!-- Tab Container -->
+      <div class="tab">
+        <a class="tab-link" onclick="currentImg(1)">Clearing</a>
+        <a class="tab-link" onclick="currentImg(14)">Upcoming</a>
       </div>
-      <!-- Gallery container -->
+      <!-- Clearing tab gallery container -->
       <div class="gallery">
         <!-- Gallery navigation by clicking to the right or left of images -->
         <a class="prev-img" onclick="plusImg(-1)"></a>
@@ -42,21 +40,34 @@
         <!-- Gallery container for images -->
         <div class="gallery-main">
           <!-- Gallery images -->
-          <img class="gallery-img" src="./images/public art/JCP_0746-X3.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0768-X3.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0782-X3.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0787-X3.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0806-X3.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0807-X3.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0829-X3.jpg">
-          <img class="gallery-img" src="./images/public art/11_o.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0841-X3.jpg">
-          <img class="gallery-img" src="./images/public art/7_o.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0845-X3.jpg">
-          <img class="gallery-img" src="./images/public art/3_o.jpg">
-          <img class="gallery-img" src="./images/public art/JCP_0952-X3.jpg">
-        </div>
-        
+          <div class="gallery-img first gallery-description">
+            <h2>Clearing</h2>
+            <p><i>Clearing</i> is an integrated network of abstract objects which reproduce parts of a painting. Seven interlocking porcelain enamel panels line the central pathway, ranging in height from eighteen inches to six feet. Panels create abstractions of both site and installation, either integrating the reproduced artwork on their front faces with the living landscape behind, or occupying space as monolithic blocks of color on the inverse.</p>
+            <p>The centerpiece of Sacramento’s Burnett Miller Park, <i>Clearing</i> mediates surface, depth-of-field, and perspective.</p>
+            <p>Assisted by Galen Pardee</p>
+            <p>Photography by Joan Cusick And Injinash Unshin</p>
+          </div>
+          <img class="gallery-img first" src="./images/public art/JCP_0746-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0768-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0782-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0787-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0807-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0829-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/11_o.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0841-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/7_o.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0845-X3.jpg">
+          <img class="gallery-img first" src="./images/public art/3_o.jpg">
+          <img class="gallery-img first" src="./images/public art/JCP_0952-X3.jpg">
+          <div class="gallery-img second gallery-description">
+            <h2>Upcoming</h2>
+          </div>
+          <img class="gallery-img second" src="./images/public art/Roma in Room 1.jpg">
+          <img class="gallery-img second" src="./images/public art/Roma Visualization.jpg">
+          <img class="gallery-img second" src="./images/public art/IMG_6600.jpg">
+          <img class="gallery-img second" src="./images/public art/IMG_6601.jpg">
+          <img class="gallery-img second" src="./images/public art/IMG_6602.jpg">
+
         <!-- Gallery container for the bottom navigation-->
         <!-- Click an image to jump to it, use overflow to scroll through them -->
         <div class="gallery-nav">
@@ -66,11 +77,11 @@
             <a class="next-button" onclick="plusImg(1)">❯</a>
           </div>
           <!-- Gallery navigation icon buttons -->
-          <img class="gallery-icon" onclick="currentImg(1)" src="./images/public art/icons/JCP_0746-X3 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(2)" src="./images/public art/icons/JCP_0768-X3 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(3)" src="./images/public art/icons/JCP_0782-X3 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(4)" src="./images/public art/icons/JCP_0787-X3 icon.jpg">
-          <img class="gallery-icon" onclick="currentImg(5)" src="./images/public art/icons/JCP_0806-X3 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(1)" src="./images/public art/icons/Clearing icon.png">
+          <img class="gallery-icon" onclick="currentImg(2)" src="./images/public art/icons/JCP_0746-X3 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(3)" src="./images/public art/icons/JCP_0768-X3 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(4)" src="./images/public art/icons/JCP_0782-X3 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(5)" src="./images/public art/icons/JCP_0787-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(6)" src="./images/public art/icons/JCP_0807-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(7)" src="./images/public art/icons/JCP_0829-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(8)" src="./images/public art/icons/11_o icon.jpg">
@@ -79,22 +90,12 @@
           <img class="gallery-icon" onclick="currentImg(11)" src="./images/public art/icons/JCP_0845-X3 icon.jpg">
           <img class="gallery-icon" onclick="currentImg(12)" src="./images/public art/icons/3_o icon.jpg">
           <img class="gallery-icon" onclick="currentImg(13)" src="./images/public art/icons/JCP_0952-X3 icon.jpg">
-        </div>
-        <!-- Empty info divs so the gallery script doesn't throw errors -->
-        <div class="gallery-info">
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
-          <div class="info"></div>
+          <img class="gallery-icon" onclick="currentImg(14)" src="./images/public art/icons/mehraban1 icon.png">
+          <img class="gallery-icon" onclick="currentImg(15)" src="./images/public art/icons/Roma in Room 1 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(16)" src="./images/public art/icons/Roma Visualization icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(17)" src="./images/public art/icons/IMG_6600 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(18)" src="./images/public art/icons/IMG_6601 icon.jpg">
+          <img class="gallery-icon" onclick="currentImg(19)" src="./images/public art/icons/IMG_6602 icon.jpg">
         </div>
       </div>
     </div>
