Small Meeting Changes
Almost done. Edited the archive script the same way as the gallery script to take into account missing info. Removed placeholder info from archive and works on paper. Added a border around the slide text in special projects. Added the wide modifier to the landscapes in the archive modal.

--- a/public art.html
+++ b/public art.html
@@ -61,6 +61,8 @@
           <img class="gallery-img first" src="./images/public art/JCP_0952-X3.jpg">
           <div class="gallery-img second gallery-description">
             <h2>Upcoming</h2>
+            <p>Werfel was approached by Mehraban in the spring of 2018 about the possibility of rendering “Roma” in a fine art rug. This collaboration is part of an effort by Mehraban to close the gap between the arts. Mehraban was attracted to Werfel's color palette, lively lines and composition. By creating this rug, collectors can own versions of “Roma” and experience the work in a new, more tactile way. Longstanding Los Angeles rug dealers, Mehraban was originally established in Tehran in 1945. They have been a fixture in the design scene on La Cienega Blvd in Los Angeles for more than thirty-five years.</p>
+            <p>The rug woven from Werfel's artwork is a 150 knot Tibetan Carpet. This is the highest quality Tibetan knot rug. It is woven in Mehraban's workshop in Kathmandu, Nepal. The content is 50% Tibetan handspan wool and 50% Chinese raw silk. It is being woven in a 9’ x 12’ size.</p>
           </div>
           <img class="gallery-img second" src="./images/public art/Roma in Room 1.jpg">
           <img class="gallery-img second" src="./images/public art/Roma Visualization.jpg">
