--- a/archive.html
+++ b/archive.html
@@ -104,34 +104,16 @@
         <img class="modal-img" src="./images/archive/abstractions/Winter Light 2014.jpg">
 
         <!-- Landscape modal images -->
-        <img class="modal-img" src="./images/archive/landscapes/Santa Cruz old.jpg">
-        <img class="modal-img" src="./images/archive/landscapes/Incoming Tide.jpg">
-        <img class="modal-img" src="./images/archive/landscapes/Olmsted Point.jpg">
-        <img class="modal-img" src="./images/archive/landscapes/Umbrian Hills 60x72.jpg">
-        <img class="modal-img" src="./images/archive/landscapes/Outbuildings.jpg">
-        <img class="modal-img" src="./images/archive/landscapes/Umbrella Pine.jpg">
+        <img class="modal-img wide" src="./images/archive/landscapes/Santa Cruz old.jpg">
+        <img class="modal-img wide" src="./images/archive/landscapes/Incoming Tide.jpg">
+        <img class="modal-img wide" src="./images/archive/landscapes/Olmsted Point.jpg">
+        <img class="modal-img wide" src="./images/archive/landscapes/Umbrian Hills 60x72.jpg">
+        <img class="modal-img wide" src="./images/archive/landscapes/Outbuildings.jpg">
+        <img class="modal-img wide" src="./images/archive/landscapes/Umbrella Pine.jpg">
         
         <!-- Gallery container for the image information -->
         <div class="gallery-info">
           <!-- Image information captions -->
-          <div class="info">info 1</div>
-          <div class="info">info 2</div>
-          <div class="info">info 3</div>
-          <div class="info">info 4</div>
-          <div class="info">info 5</div>
-          <div class="info">info 6</div>
-          <div class="info">info 7</div>
-          <div class="info">info 8</div>
-          <div class="info">info 9</div>
-          <div class="info">info 10</div>
-          <div class="info">info 11</div>
-          <div class="info">info 12</div>
-          <div class="info">info 13</div>
-          <div class="info">info 14</div>
-          <div class="info">info 15</div>
-          <div class="info">info 16</div>
-          <div class="info">info 17</div>
-          <div class="info">info 18</div>
         </div>
       </div>
     </div>
