Small Nav change
Changed the navigation link to go to "/" rather than "/index.html" when clicking the title. Doesn't work when veiwing the files straight from my directory, but works on the server, where it matters.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   	<!-- The navigation bar at the top of the screen -->
     <header class="homepage header">
-      <a class="title" href="./index.html">Gina Werfel</a>
+      <a class="title" href="/">Gina Werfel</a>
       <div class="container">
       	<nav class="homepage navigation">
       	  <a href="./painting.php">Paintings</a>
