--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="keywords" content="Gina Werfel, Prince Street Gallery, Artist">
   	<title>About | Gina Werfel</title>
   </head>
 
@@ -36,16 +37,16 @@
         <h3>Gina Werfel</h3>
         <p>gswerfel@ucdavis.edu</p><br>
         <h3>Prince Street Gallery</h3>
-        <p><a href="https://princestreetgallery.com/artist-page/gina-werfel/" target="_blank">https://princestreetgallery.com/artist-page/gina-werfel/</a><br>
+        <p><a href="https://princestreetgallery.com/artist-page/gina-werfel/" target="_blank" rel="nofollow">https://princestreetgallery.com/artist-page/gina-werfel/</a><br>
         530 West 25th Street 4th Floor<br>
         New York, NY 10001<br>
         (646)230-0246</p>
         <h3>IdeelArt</h3>
-        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p>
+        <p><a href="http://www.ideelart.com/artists/1351-gina-werfel.html" target="_blank" rel="nofollow">http://www.ideelart.com/artists/1351-gina-werfel.html</a></p>
         <h3>Adler&Co Gallery</h3>
-        <p><a href="http://www.adlerandco.com/werfel/index.html" target="_blank">http://www.adlerandco.com/werfel/index.html</a></p><br>
+        <p><a href="http://www.adlerandco.com/werfel/index.html" target="_blank" rel="nofollow">http://www.adlerandco.com/werfel/index.html</a></p><br>
 
-        <h3><a id="cv" href="./GW_cv.pdf" target="_blank">Curriculum Vitae</a></h3><br>
+        <h3><a id="cv" href="./GW_cv.pdf" target="_blank" rel="nofollow">Curriculum Vitae</a></h3><br>
 
         <h2>Artist Statement</h2>
         <p>Werfel’s current paintings and works on paper involve multiple voices. Clearly defined graphical lines and stencils exist in tension with more naturalistic gestures, which fade in and out of focus like distant memories in a shallow, ambiguous space. The layering, and the contrast between the stencilled and hand-drawn marks, make reference to the influence of Photoshop on contemporary visual culture. The removal of the hand in a recent series of process-driven mono-prints highlights this dichotomy.</p>
