--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   	<meta charset="utf-8">
   	<link rel="stylesheet" type="text/css" href="style.css">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  	<meta name="description" content="">
+  	<meta name="description" content="Gina Werfel is an artist whose painterly abstract paintings derive from moving and interacting with her surroundings.">
+  	<meta name="keywords" content="Gina Werfel, Prince Street Gallery, Artist">
   	<title>Home | Gina Werfel</title>
   </head>
 
