--- a/public art.html
+++ b/public art.html
@@ -31,7 +31,7 @@
       <!-- Tab Container -->
       <div class="tab">
         <a class="tab-link" onclick="currentImg(1)">Clearing</a>
-        <a class="tab-link" onclick="currentImg(14)">Upcoming</a>
+        <a class="tab-link" onclick="currentImg(14)">Rug Project</a>
       </div>
       <!-- Clearing tab gallery container -->
       <div class="gallery">
